--- a/components/Banner/Banner.module.css
+++ b/components/Banner/Banner.module.css
@@ -10,8 +10,17 @@
 .bannerLinks {
     display: inline;
     position: absolute;
-    right: 20px;
-    top: 13px;
+    right: 15px;
+    top: 8px;
+}
+.bannerLinks > a {
+    background-color: #2a2a2a;
+    border-radius: 50%;
+    display: inline-block;
+    height: 43px;
+    width: 43px;
+    margin-left: 10px;
+    padding-top: 5px;
 }
 
 .bannerConstruction {
