chore: bump @eveshipfit/react and @eveshipfit/dogma-engine to latest
Additionally, enable a detailed calculation pane, for easier spotting
why information is incorrect.

* feat: component to show in detail how attributes were calculated
* fix(ShipStatistics): mass is presented in kg, not the expected tons
* fix: positive stacking penalty calculation is off

--- a/components/Debug/Debug.module.css
+++ b/components/Debug/Debug.module.css
@@ -15,3 +15,17 @@
 .debugError {
     color: #c84824;
 }
+
+.detail {
+    border: 1px solid #cdcdcd;
+    border-radius: 25px;
+    margin-top: 10px;
+    padding: 20px 0;
+    position: relative;
+}
+
+.detailHeader {
+    display: block;
+    margin-bottom: 10px;
+    text-align: center;
+}
