--- a/app/page.module.css
+++ b/app/page.module.css
@@ -8,14 +8,15 @@
     border-radius: 25px;
     color: #c5c5c5;
     display: flex;
-    margin-top: 10px;
     justify-content: flex-end;
+    margin-top: 10px;
     padding: 20px;
 }
 
 .selection {
     flex: 1;
     margin-top: 10px;
+    overflow-x: hidden;
     padding-right: 10px;
 }
 .selectionHeader {
@@ -50,6 +51,8 @@
 }
 
 .fit {
+    height: 730px;
+    width: 730px;
 }
 
 .statistics {
