chore: bump @eveshipfit/react to 2.1.0
This also removes the need for the Debug component and we can no
longer consider this website pre-alpha.

* feat: loading fits from a Browser's LocalStorage
* feat: show name of fit next to the fit
* feat: ability to rename fits and save them in the browser
* feat: visually indicate the origin of a fit (browser, ESI, ..)
* feat: import/export current fit as EFT string
* feat: import of ESI JSON fits from clipboard
* feat: "Share Link" button to quickly share the current fit
* fix: name a new ship's name based on the ship type
* fix: rotate the radial menu icon back into an upright position
* fix: use proper icons for cargo-hold and drone-bay
* fix: sort the fits based on their name
* fix: selecting two filters in Hardware shows an empty list

--- a/app/page.module.css
+++ b/app/page.module.css
@@ -11,6 +11,7 @@
     justify-content: flex-end;
     margin-top: 10px;
     padding: 20px;
+    position: relative;
 }
 
 .selection {
@@ -41,7 +42,8 @@
     margin-left: 5px;
 }
 .selectionContent {
-    height: 755px;
+    height: 644px;
+    margin-bottom: 10px;
 }
 .collapsed {
     display: none;
