--- a/app/page.module.css
+++ b/app/page.module.css
@@ -20,6 +20,7 @@
   margin-top: 10px;
   overflow-x: hidden;
   padding-right: 10px;
+  z-index: 10;
 }
 .selectionHeader {
   display: flex;
@@ -56,11 +57,13 @@
 .fit {
   height: 730px;
   width: 730px;
+  z-index: 4;
 }
 
 .statistics {
   margin-top: 10px;
   position: relative;
+  z-index: 9;
 }
 
 .statistics > div:first-child {
