--- a/app/page.module.css
+++ b/app/page.module.css
@@ -69,3 +69,13 @@
 .statistics > div:first-child {
   margin-bottom: 10px;
 }
+
+.footer {
+  color: #7a7a7a;
+  font-size: 12px;
+  margin-top: 12px;
+  text-align: center;
+}
+.footer a {
+  color: #7a7a7a;
+}
